--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,7 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: cd
       run: cd src
-      run: ls -l
     - name: make
-      run: pwd
-      run: make
+      run: pwd; make
